--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Lato|Rock+Salt" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Rock+Salt" rel="stylesheet">
     <title>Flash Tests</title>
   </head>
   <body>
